--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -58,7 +58,7 @@ header.fixed-header {
   top: 0;
   left: 0;
   z-index: 9998;
-  background-color: rgba(255, 255, 255, 0.97);
+  background-color: rgba(43, 129, 178, 0.9);
   -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
@@ -135,12 +135,12 @@ header.transparent.light nav > ul > li > a {
 
 header.fixed-header.transparent.light #brand a,
 header.fixed-header.transparent.light nav > ul > li > a {
-  color: #333;
+  color: #EEE;
   text-shadow: none;
 }
 
 header.fixed-header.transparent.light nav > ul > li:hover > a {
-  border-bottom: 2px solid #333;
+  border-bottom: 2px solid #EEE;
 }
 
 nav > ul,
